custom font and avatars added

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,2 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400;0,700;1,400&family=Instrument+Serif:ital@0;1&display=swap');
+
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
+
+body {
+    font-family: 'Instrument Sans', sans-serif;
+}
+
+h1 {
+    font-family: 'Instrument Serif', serif;
+}
