--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,7 +3,7 @@
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
 
-body {
+* {
     font-family: 'Instrument Sans', sans-serif;
 }
 
